INT131_Sourav/force-app/main/default/objects/Bank_Account__c/fields/Loan_Balance__c.field-meta.xml
<CustomField>
    <fullName>Loan_Balance__c</fullName>
    <label>Loan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>