INT131_Sourav/force-app/main/default/objects/Bank_Account__c/fields/LoanBalance__c.field-meta.xml
<CustomField>
    <fullName>LoanBalance__c</fullName>
    <formula>Product__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LoanBalance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>