INT131_Sourav/force-app/main/default/objects/Bank_Account__c/fields/Saving_Balance__c.field-meta.xml
<CustomField>
    <fullName>Saving_Balance__c</fullName>
    <formula>Amount__c  -  Product__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saving Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>