INT131_Sourav/force-app/main/default/objects/Bank_Account__c/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <label>Tenure</label>
    <length>80</length>
    <type>Text</type>
</CustomField>